--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_bloc:
   bloc: ^8.1.4
-  google_fonts: ^6.2.1
+  google_fonts: 
   http: 
 
   # The following adds the Cupertino Icons font to your application.
